# ansible-wireguard

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
defaults/: main.yml
files/: wireguard-ui.service
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/default/tests/: test_firewall_rules.py  test_packages.py  test_services.py  test_wireguard.py
tasks/: firewall.yml  main.yml  wireguard-ui.yml  wireguard.yml
templates/: wg0.conf.j2  wireguard-ui.conf.j2
