[tool.poetry]
name = "ansible-wireguard"
version = "0.1.0"
description = ""
authors = ["Mike Pettypiece <mike@pettypiece.ca>"]
readme = "README.md"
packages = [{include = "wireguard"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
ansible-lint = "^6.8.7"
flake8 = "^6.0.0"
molecule = "^4.0.4"
molecule-docker = "^2.1.0"
pytest = "^7.2.0"
pytest-testinfra = "^7.0.0"
yamllint = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
